[workspace]
default-members = [
    "node",
    "primitives",
    "runtime/common",
    "runtime/battery-station",
    "runtime/zeitgeist",
    "zrml/authorized",
    "zrml/court",
    "zrml/global-disputes",
    "zrml/liquidity-mining",
    "zrml/market-commons",
    "zrml/orderbook-v1",
    "zrml/prediction-markets",
    "zrml/prediction-markets/runtime-api",
    "zrml/rikiddo",
    "zrml/simple-disputes",
    "zrml/swaps",
    "zrml/swaps/rpc",
    "zrml/swaps/runtime-api",
    "zrml/styx",
]
members = [
    "node",
    "primitives",
    "runtime/common",
    "runtime/battery-station",
    "runtime/zeitgeist",
    "zrml/authorized",
    "zrml/court",
    "zrml/global-disputes",
    "zrml/liquidity-mining",
    "zrml/market-commons",
    "zrml/orderbook-v1",
    "zrml/orderbook-v1/fuzz",
    "zrml/prediction-markets",
    "zrml/prediction-markets/fuzz",
    "zrml/prediction-markets/runtime-api",
    "zrml/rikiddo",
    "zrml/rikiddo/fuzz",
    "zrml/simple-disputes",
    "zrml/swaps",
    "zrml/swaps/fuzz",
    "zrml/swaps/rpc",
    "zrml/swaps/runtime-api",
    "zrml/styx",
]
resolver = "2"
# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.

[workspace.dependencies]
# Dependencies are split into 2 groups: wasm and client.
# - "wasm" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# Cumulus / Nimbus (client)
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37" }
nimbus-consensus = { git = "https://github.com/zeitgeistpm/nimbus", branch = "polkadot-v0.9.37-use-paritytech-dependencies" }

# Cumulus / Nimbus (wasm)
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }
nimbus-primitives = { git = "https://github.com/zeitgeistpm/nimbus", branch = "polkadot-v0.9.37-use-paritytech-dependencies", default-features = false }
pallet-author-inherent = { git = "https://github.com/zeitgeistpm/nimbus", branch = "polkadot-v0.9.37-use-paritytech-dependencies", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/zeitgeistpm/nimbus", branch = "polkadot-v0.9.37-use-paritytech-dependencies", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37", default-features = false }

# Moonbeam (client)
moonbeam-vrf = { git = "https://github.com/zeitgeistpm/moonbeam", branch = "polkadot-v0.9.37-use-paritytech-dependencies-bench-fix" }

# Moonbeam (wasm)
pallet-author-mapping = { git = "https://github.com/zeitgeistpm/moonbeam", branch = "polkadot-v0.9.37-use-paritytech-dependencies-bench-fix", default-features = false }
pallet-parachain-staking = { git = "https://github.com/zeitgeistpm/moonbeam", branch = "polkadot-v0.9.37-use-paritytech-dependencies-bench-fix", default-features = false }
session-keys-primitives = { git = "https://github.com/zeitgeistpm/moonbeam", branch = "polkadot-v0.9.37-use-paritytech-dependencies-bench-fix", default-features = false }

# ORML (wasm)
orml-asset-registry = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-benchmarking = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }

# Substrate (client)
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
futures = { version = "0.3.21" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
xcm-emulator = { rev = "6847a58888e483f0ed2e0b72f90e00767ea0ecac", git = "https://github.com/shaunxw/xcm-simulator" }

# Substrate (wasm)
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.3.1", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# Polkadot / XCM (client)
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }

# Polkadot / XCM (wasm)
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }

# Zeitgeist (client)
battery-station-runtime = { path = "runtime/battery-station" }
zeitgeist-runtime = { path = "runtime/zeitgeist" }
zrml-prediction-markets-fuzz = { path = "zrml/prediction-markets/fuzz" }
zrml-rikiddo-fuzz = { path = "zrml/rikkido/fuzz" }
zrml-swaps-fuzz = { path = "zrml/swaps/fuzz" }
zrml-swaps-rpc = { path = "zrml/swaps/rpc" }

# Zeitgeist (wasm)
common-runtime = { path = "runtime/common", default-features = false }
zeitgeist-primitives = { path = "primitives", default-features = false }
zrml-authorized = { path = "zrml/authorized", default-features = false }
zrml-court = { path = "zrml/court", default-features = false }
zrml-global-disputes = { path = "zrml/global-disputes", default-features = false }
zrml-liquidity-mining = { path = "zrml/liquidity-mining", default-features = false }
zrml-market-commons = { path = "zrml/market-commons", default-features = false }
zrml-orderbook-v1 = { path = "zrml/orderbook-v1", default-features = false }
zrml-prediction-markets = { path = "zrml/prediction-markets", default-features = false }
zrml-prediction-markets-runtime-api = { path = "zrml/prediction-markets/runtime-api", default-features = false }
zrml-rikiddo = { path = "zrml/rikiddo", default-features = false }
zrml-simple-disputes = { path = "zrml/simple-disputes", default-features = false }
zrml-styx = { path = "zrml/styx", default-features = false }
zrml-swaps = { path = "zrml/swaps", default-features = false }
zrml-swaps-runtime-api = { path = "zrml/swaps/runtime-api", default-features = false }

# Other (client)
clap = "4.0.32"
jsonrpsee = "0.16.2"
libfuzzer-sys = "0.4.6"
more-asserts = "0.3.1"
test-case = "3.1.0"
url = "2.2.2"

# Other (wasm)
arbitrary = { version = "1.3.0", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
cfg-if = { version = "1.0.0" }
# Hashbrown works in no_std by default and default features are used in Rikiddo
hashbrown = { version = "0.12.3", default-features = true }
hex-literal = { version = "0.3.4", default-features = false }
log = { version = "0.4.17", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.152", default-features = false }

[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.production]
codegen-units = 1
incremental = false
inherits = "release"
lto = true

[profile.release]
opt-level = 3
# Zeitgeist runtime requires unwinding.
panic = "unwind"

[patch."https://github.com/paritytech/polkadot"]
pallet-xcm = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-cli = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-client = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-core-primitives = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-node-core-av-store = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-node-network-protocol = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-node-primitives = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-node-subsystem = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-node-subsystem-util = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-overseer = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-parachain = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-primitives = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-runtime = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-runtime-parachains = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-service = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
polkadot-test-service = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
rococo-runtime = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
xcm = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
xcm-builder = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
xcm-executor = { git = "https://github.com/zeitgeistpm/polkadot.git", branch = "v0.9.37-recent-bootnodes" }
